Allow socket dir for Gitaly-Ruby to be configured
In case the `/tmp` directory can't be used for security reasons, this
can be configured. The default behaviour as in production right now will
remain. So if nothing is set, `/tmp` will be reused.

--- a/config.toml.example
+++ b/config.toml.example
@@ -12,6 +12,11 @@ bin_dir = "/home/git/gitaly"
 # # Optional: export metrics via Prometheus
 # prometheus_listen_addr = "localhost:9236"
 
+# # Configure where the Gitaly creates the sockets for internal connections.
+# # Defaults to the os temp dir. Non Gitaly clients should never connect to
+# # these sockets.
+# internal_socket_dir = "/home/git/gitaly/internal_sockets"
+
 # # Optional: authenticate Gitaly requests using a shared secret
 # [auth]
 # token = 'abc123secret'
